commited Profile page

--- a/ProfilePage/CMakeLists.txt
+++ b/ProfilePage/CMakeLists.txt
@@ -4,5 +4,9 @@ project(ProfilePage)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(ProfilePage main.cpp
-        Model/Student.cpp
-        Model/Student.h)
+        Model/Student/Student.cpp
+        Model/Student/Student.h
+        Constant/Common.h
+        Model/File/File.cpp
+        Model/File/File.h
+        Constant/Common.cpp)
